docs(flink): production-readiness review; checkpointing postponed
Review of the compose Flink cluster for production. No cluster config or
job code is changed by this commit — it records findings and decisions
only.

Four verified findings:

- Flink's default restart-strategy is `disable` when checkpointing is
  off, so today the first exception in any job kills it permanently
  while the other six keep running.
- KafkaSink defaults to DeliveryGuarantee.NONE and no job overrides it,
  so every sink is at-most-once.
- The image's own config.yaml sets taskmanager.memory.process.size to
  1728m, leaving roughly 384 MB of task heap for all seven jobs.
- high-availability.type defaults to NONE, so a JobManager restart
  returns an empty cluster.

Two standing decisions:

- Checkpointing is POSTPONED, not rejected. Flink has no cross-job
  checkpoint coordination, so a crashed upstream job replays into a
  downstream job that never restarted and silently reverts price
  levels. BookBuildFunction reads sequence_id only to stamp output and
  never compares it, and job 2 — the only sequence validator — sits
  four stages upstream. This corrects an earlier claim in the review
  that the book builder is "idempotent by construction": idempotent is
  not commutative. Preference is to restart from `latest` and
  re-baseline from a snapshot rather than resume from possibly-wrong
  state. S1 is closed (keep OffsetsInitializer.latest()); M5, S2, M6,
  S6 and L4 are parked alongside checkpointing.
- NiFi is out of scope: not managed from our side, development-only in
  this compose file. No NiFi change is proposed anywhere.

Agreed for this round, in apply order: M1 explicit restart-strategy,
M7 unless-stopped + log rotation, M2a/M2b TaskManager memory then 4x2
slots, S5 TM healthcheck, M4 producer acks=all + enable.idempotence
(AT_LEAST_ONCE is inert without checkpointing — it flushes on
checkpoint), M8 bind 7070 privately, M3 ZooKeeper HA, S4 HistoryServer,
M9 Prometheus stack, S7 